fixed some alignment issue

--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -1,3 +1,19 @@
 .modal {
   max-width: 600px;
 }
+
+.modal-content {
+  .btn-row {
+    align-content: center;
+  }
+}
+
+.modal-content form .modal-text {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  height: 36px;
+  div {
+    white-space: pre;
+  }
+}
